# snakeOS

./: .gitignore  Dockerfile  README.md  pyproject.toml
config/: services.baremetal.example.toml  services.deps-test.toml  services.desktop.example.toml  services.example.toml
config/apt/sources.list.d/: snakeos.list.example
config/greetd/: config.example.toml
config/snakeos/: systemd-edition.txt
distribution/: issue.snakeos  lsb-release.in  motd.snakeos  os-release.in
mkosi/: README  mkosi.conf
scripts/: build-rootfs-debian-desktop.sh  build-rootfs-debian-standard.sh  build-rootfs-debian.sh  chroot-post-desktop.sh  chroot-post-standard-desktop.sh  install-distro-identity.sh  live-install-to-disk.sh
snakeos/: __init__.py  __main__.py  boot.py  cli.py  config_loader.py  distinfo.py  graph.py  pid1.py  supervisor.py
